[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/icon/checkbox_check.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/menu/menu.gd" type="Script" id=4]
[ext_resource path="res://assets/button/border_button.tscn" type="PackedScene" id=5]

[node name="menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = -298.5
margin_right = 251.0
margin_bottom = 298.5
script = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.917647 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -86.0
alignment = 1

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 502.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 34.0
margin_right = 502.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 3 )
text = "Menu"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 98.0
margin_right = 502.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 30 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 132.0
margin_right = 502.0
margin_bottom = 212.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_right = 139.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 143.0
margin_top = 20.0
margin_right = 251.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Sound"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 255.0
margin_right = 275.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )

[node name="sfx_setting" type="Button" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 279.0
margin_right = 359.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/HBoxContainer2/sfx_setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 363.0
margin_right = 502.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 216.0
margin_right = 502.0
margin_bottom = 296.0
rect_min_size = Vector2( 80, 80 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 300.0
margin_right = 502.0
margin_bottom = 380.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 42.0
margin_right = 122.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="resume" parent="VBoxContainer2/HBoxContainer3" instance=ExtResource( 5 )]
margin_left = 126.0
margin_right = 376.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
button_label = "Resume"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 380.0
margin_right = 460.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 384.0
margin_right = 502.0
margin_bottom = 409.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 413.0
margin_right = 502.0
margin_bottom = 493.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 42.0
margin_right = 122.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="exit" parent="VBoxContainer2/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 126.0
margin_right = 376.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
button_color = Color( 0.572549, 0.105882, 0, 1 )
button_label = "Main menu"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 380.0
margin_right = 460.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 497.0
margin_right = 502.0
margin_bottom = 597.0
rect_min_size = Vector2( 0, 100 )

[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/sfx_setting" to="." method="_on_sfx_setting_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/exit" to="." method="_on_exit_pressed"]
